[package]
name = "radsec_server"
version = "0.2.0"
edition = "2024"

[dependencies]
#https://crates.io/crates/radius-server
radius-server = ">=0.2.3"

# Async runtime & High-Performance Networking
tokio = { version = "1.36", features = ["full"] }

# TLS & Cryptography (FIPS & Post-Quantum ready via aws-lc-rs)
#rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-rustls = "0.26"

# Memory hygiene / Cryptographic security
zeroize = "1.7"
pem = "3.0"

# Strict Configuration Management
serde = { version = "1.0", features = ["derive"] }
toml = { version = ">=1.1.2", features = ["parse", "display"] }

# Volumetric Attack Prevention / Token-Bucket Rate Limiting
# Upgraded govenor to 0.10.4 for security and memory-safety features
governor = ">=0.10.4"
nonzero_ext = "0.3"

# Compliant JSONL Audit Logging Engine
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
# Ephemeral securely-permissioned environments for STIG/PCI validation testing
tempfile = "3.10"

[profile.release]
opt-level = 3           # Maximize performance optimizations (speed over binary size)
lto = true              # Enable Link-Time Optimization across all crates
codegen-units = 1       # Reduce parallel generation blocks to maximize LTO effectiveness
panic = "abort"         # Strip stack unwinding code to reduce binary size and stop exploit pivoting
strip = true            # Strictly strips all debug symbols and symbol tables from the final binary
