[package]
name = "radsec_edge"
version = "0.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }

rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-rustls = "0.26"

serde = { version = "1.0", features = ["derive"] }
toml = { version = "1.0", features = ["parse", "display"] }

governor = "0.10.4"
nonzero_ext = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

pem = "3.0"
zeroize = "1.7"

sha2 = "0.10"
x509-parser = "0.16"
hmac = "0.12"
md-5 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
